--- a/autocolor/changelog.txt
+++ b/autocolor/changelog.txt
@@ -1,5 +1,10 @@
 ---------------------------------------------------------------------------------------------------
-Version: 0.16.0
+Version: 0.16.2
+Date: 04. 10. 2018
+  Features:
+    - Add multiplayer support
+---------------------------------------------------------------------------------------------------
+Version: 0.16.1
 Date: 03. 05. 2018
   Features:
     - Add chat_color
@@ -7,5 +12,5 @@ Date: 03. 05. 2018
 ---------------------------------------------------------------------------------------------------
 Version: 0.16.0
 Date: 03. 05. 2018
-  Initial release
----------------------------------------------------------------------------------------------------
+  Features:
+    - Initial release
