--- a/autocolor/changelog.txt
+++ b/autocolor/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.0
+Date: 26. 02. 2019
+  General:
+    - Update for 0.17
+---------------------------------------------------------------------------------------------------
 Version: 0.16.2
 Date: 04. 10. 2018
   Features:
