--- a/autocolor/changelog.txt
+++ b/autocolor/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.18.0
+Date: 21. 01. 2020
+  General:
+    - Update for 0.18
+---------------------------------------------------------------------------------------------------
 Version: 0.17.0
 Date: 26. 02. 2019
   General:
