--- a/autocolor/changelog.txt
+++ b/autocolor/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 12. 01. 2021
+  General:
+    - Update for 1.1
+---------------------------------------------------------------------------------------------------
 Version: 0.18.0
 Date: 21. 01. 2020
   General:
